Add affiliation, remove extra frame

--- a/20190909_neurofedora.tex
+++ b/20190909_neurofedora.tex
@@ -57,7 +57,7 @@
 %% title %%
 \title[NeuroFedora]{\includegraphics[keepaspectratio,width=.25\textwidth]{images/NeuroFedoraLogo01.png}\\NeuroFedora}
 \subtitle{Free Software for Free Neuroscience}
-\author{Ankur Sinha (on behalf of NeuroFedora contributors)}
+\author{Ankur Sinha\\Ph.D. candidate: UH Biocomputation Group, UK,\\Volunteer: Fedora Project.}
 \date[]{}
 %% document begins %%
 \begin{document}
@@ -181,14 +181,6 @@
     \item \alert{make neuroscience accessible} to non-specialists,
   \end{itemize}
   \footnotetext[7]{Researchers, academics, hobbyists, anyone!}
-\end{frame}
-\begin{frame}[c]{In essence,}
-  \textcolor{FedoraBlue}{NeuroFedora is:\\}
-  \begin{itemize}
-    \item \textcolor{FriendsMagenta}{merely leveraging pre-existing community resources to a new domain of software.}\\
-      \pause{}
-    \item \textcolor{FeaturesOrange}{taking the community model of FOSS to neuroscience research,}
-  \end{itemize}
 \end{frame}
 \begin{frame}[c]{NeuroFedora: current metrics}
   \begin{itemize}
