Remove trailing commas

--- a/20190909_neurofedora.tex
+++ b/20190909_neurofedora.tex
@@ -88,7 +88,7 @@
   FOSS\@:\\\alert{Everyone} should have the freedom to \alert{share, study, and modify} software\footnotemark[5].\\
   \footnotetext[2]{\href{https://u.fsf.org/user-liberation}{Free software foundation}}
 \end{frame}
-\begin{frame}[c]{So we strive to use more and more FOSS,}
+\begin{frame}[c]{So we strive to use more and more FOSS}
   \begin{figure}[htpb]
     \centering
     \includegraphics[width=\linewidth]{images/open-source-paper.png}
@@ -112,31 +112,31 @@
   \begin{itemize}
     \item \alert{various specialities:} biologists, mathematicians, physicists, chemists, psychologists, \ldots, 
       \pause{}
-    \item \alert{small proportion of trained software developers},
+    \item \alert{small proportion of trained software developers}
   \end{itemize}
 \end{frame}
 \begin{frame}[c]{(Anecdotal) notes on development of research software}
   \begin{itemize}
-    \item often \alert{single developer}, or small development teams,
-    \item limited \alert{maintenance, short-lived projects},
-    \item limited \alert{access to hardware/resources},
-    \item limited \alert{code quality},
-    \item limited \alert{use of established best practices},
-    \item limited \alert{testing for correctness (!)},
-    \item \alert{complex dependency chains},
-    \item lack of \alert{documentation and support},
-    \item lack of \alert{community development know-how},
+    \item often \alert{single developer}, or small development teams
+    \item limited \alert{maintenance, short-lived projects}
+    \item limited \alert{access to hardware/resources}
+    \item limited \alert{code quality}
+    \item limited \alert{use of established best practices}
+    \item limited \alert{testing for correctness (!)}
+    \item \alert{complex dependency chains}
+    \item lack of \alert{documentation and support}
+    \item lack of \alert{community development know-how}
   \end{itemize}
   \note[item]{Give how interdisciplinary neuroscience is, most researchers are NOT trained in development}
   \note[item]{This implies, and this is based on anecdotal evidence, that the software used in research is not of the best quality}
 \end{frame}
 \begin{frame}[c]{(Anecdotal) notes on users of research software}
   \begin{itemize}
-    \item \alert{waste time and effort} installing (and reinstalling) their software stacks,
-    \item \alert{rarely run test suites (!)},
-    \item \alert{rarely report bugs} upstream,
-    \item \alert{rarely send improvements} upstream,
-    \item are \alert{unaware of helpful development tools},
+    \item \alert{waste time and effort} installing (and reinstalling) their software stacks
+    \item \alert{rarely run test suites (!)}
+    \item \alert{rarely report bugs} upstream
+    \item \alert{rarely send improvements} upstream
+    \item are \alert{unaware of helpful development tools}
   \end{itemize}
   \note[item]{The other side of the bridge is the users}
   \note[item]{Because they aren't trained, they have a hard time setting up and using the software}
@@ -159,12 +159,12 @@
 \end{frame}
 \begin{frame}[c]{Distributions, like Fedora, are in a unique position:}
   \begin{itemize}
-    \item \alert{liaison between upstream and users},
-    \item have the \alert{infrastructure},
-    \item \alert{follow best practices} in software development,
-    \item constantly \alert{work community development},
-    \item \alert{learn from one another}---train while working,
-    \item \alert{disseminate} information to end-users,
+    \item \alert{liaison between upstream and users}
+    \item have the \alert{infrastructure}
+    \item \alert{follow best practices} in software development
+    \item constantly \alert{work community development}
+    \item \alert{learn from one another}---train while working
+    \item \alert{disseminate} information to end-users
   \end{itemize}
 \end{frame}
 \begin{frame}[c]{NeuroFedora:}
@@ -176,9 +176,9 @@
   \textcolor{FirstGreen}{Secondary/collateral goals:}
   \pause{}
   \begin{itemize}
-    \item help \alert{improve the standard and maintenance} of tools,
-    \item help users \alert{develop software development skills},
-    \item \alert{make neuroscience accessible} to non-specialists,
+    \item help \alert{improve the standard and maintenance} of tools
+    \item help users \alert{develop software development skills}
+    \item \alert{make neuroscience accessible} to non-specialists
   \end{itemize}
   \footnotetext[7]{Researchers, academics, hobbyists, anyone!}
 \end{frame}
@@ -188,9 +188,9 @@
       \pause{}
     \item \textcolor{FirstGreen}{20 active contributors:}
       \begin{itemize}
-        \item 15 package maintainers,
-        \item 5 designers, newcomers,
-        \item only 5 from a neuroscience background,
+        \item 15 package maintainers
+        \item 5 designers, newcomers
+        \item only 5 from a neuroscience background
       \end{itemize}
       \pause{}
     \item \textcolor{FriendsMagenta}{software:}
