--- a/20190909_neurofedora.tex
+++ b/20190909_neurofedora.tex
@@ -162,7 +162,7 @@
     \item \alert{liaison between upstream and users}
     \item have the \alert{infrastructure}
     \item \alert{follow best practices} in software development
-    \item constantly \alert{work community development}
+    \item constantly \alert{work on community development}
     \item \alert{learn from one another}---train while working
     \item \alert{disseminate} information to end-users
   \end{itemize}
@@ -186,7 +186,7 @@
   \begin{itemize}
     \item \alert{less than a year old\footnotemark[8],}
       \pause{}
-    \item \textcolor{FirstGreen}{20 active contributors:}
+    \item \textcolor{FirstGreen}{20 volunteers}
       \begin{itemize}
         \item 15 package maintainers
         \item 5 designers, newcomers
@@ -195,15 +195,21 @@
       \pause{}
     \item \textcolor{FriendsMagenta}{software:}
       \begin{itemize}
-        \item 120 tools (packages) ready to install\footnotemark[9].
+        \item 120 tools (packages) ready to install\footnotemark[9]:
+          \begin{itemize}
+            \item Neuron, NEST, Genesis, Brian (v1 and v2), Moose, python-libNeuroML, PyLEMS, PyNWB, \ldots
+          \end{itemize}
         \item \textasciitilde{}170 in queue\footnotemark[10].
+          \begin{itemize}
+            \item NeuroMLlite, pyNeuroML, NetPyNE, \ldots
+          \end{itemize}
       \end{itemize}
   \end{itemize}
   \footnotetext[8]{in its second iteration}
   \footnotetext[9]{\href{https://src.fedoraproject.org/group/neuro-sig}{src.fedoraproject.org: Neuro-SIG}}
   \footnotetext[10]{\href{https://pagure.io/neuro-sig/NeuroFedora/issues?status=Open&tags=T\%3A+Software}{Pagure.io: Neuro-SIG: issues}}
 \end{frame}
-\begin{frame}[c]{NeuroFedora is at:}
+\begin{frame}[c]{Search: \enquote{NeuroFedora}}
   \begin{columns}
    \begin{column}{0.3\textwidth}
       \begin{figure}[h]
